# pe-plogging

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  test.py
.github/workflows/: python-test-suite.yml
pe_logging/: __init__.py  exceptions.py  logger_builder.py
pe_logging/constants/: formats.py
plogging/: __init__.py  exceptions.py  logger_builder.py
plogging/constants/: formats.py
tests/: test_builder.py
