[tool.poetry]
name = "plogging"
version = "0.0.0"
description = "A wrapper for the python standard `logging` library that eases creation of loggers for use in distributed systems."
authors = ["john-but-actually-jon <jonathan@projecteaden.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "1.5.1"
flake8 = "6.1.0"
pytest = "7.4.0"
build = "0.10.0"
twine = "4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "plogging"

[tool.black]