[tool.poetry]
name = "plogging"
version = "0.1.6"
description = "A wrapper for the python standard `logging` library that eases creation of loggers for use in distributed systems."
authors = ["john-but-actually-jon <jonathan@projecteaden.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
json-logging = "^1.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.5.1"
flake8 = "6.1.0"
flake8-pyproject = "^1.2.3"
pytest = "7.4.0"
build = "0.10.0"
twine = "4.0.2"
black = "23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "plogging"
log_cli=true
log_cli_level="DEBUG"

[tool.black]
target-version = ["py311"]

[tool.flake8]
max-complexity = 14
max-line-length = 88
extend-ignore = ["F401"]
